--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "loft-taxi-mui-theme": "^1.0.1",
     "mapbox-gl": "^1.6.1",
@@ -37,7 +36,10 @@
     ]
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.0.2"
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.2.1",
+    "cz-conventional-changelog": "^3.0.2",
+    "react-test-renderer": "^16.12.0"
   },
   "config": {
     "commitizen": {
