--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.9.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.4",
